--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3333/budget?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=pass
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/kindergarten?useSSL=false
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql: true
